--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,4 +35,6 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+    - name: Test Sample Data
+      run: ./gradlew Clean Build Run
    
