Made main stable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 }
 
+run {
+    standardInput = System.in
+}
+
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
