--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
-    implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.25.9'
+    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.9'
     // Include Gson for JSON processing
     implementation 'com.google.code.gson:gson:2.8.9'
 }
