Add better test API keys and password

--- a/app/src/main/resources/Examples/SENG2200-A1-GAustin/CredentialsTest.properties
+++ b/app/src/main/resources/Examples/SENG2200-A1-GAustin/CredentialsTest.properties
@@ -1,15 +1,23 @@
 # API Keys
-api.key.service1=abc123def456ghi789
-api.key.service2=jkl456mno789pqr012
-api.key.service3=stu789vwx012yz3456
+api.key.service1=jQzWtBpTgNUIRs6O8BVgkNb8I3tfdIIh
+api.key.service2=5IwNfPHqf0MwSAowKFMdSIquYjV43eTg
+api.key.service3=u0oSLSpnFdfk1DRazyAdJyeS5vMwiJ1K
+api.key.service4=7erpap8A7cYZrkNpp7RLsiiBGQbVDOcQ
+api.key.service5=8Qp9OdGEpImoIqOoAKXqqBsdsWMR6ozT
+api.key.service6=vQUbsrv5oZUoo2xHe9vpGIKePWu7GmQh
+api.key.service7=7Z2PEwYiUjwNsTTsZnC3lqXTFdIzMTe3
+api.key.service8=8AQvgWNx6xrOKMhklyu92mO8I4aRXj9q
+api.key.service9=oodeykkLZcXLRzvgIwfygCtusOn00vPx
+api.key.service10=eX02SxC8U32SGy3mtRsTYDkSgIkx4hVz
 
-# Passwords
-password.admin=SuperSecretPassword123!
-password.user1=QwertyQwerty123
-password.user2=P@ssw0rd456
-password.database=Db_Passw0rd_789
+# Simple Passwords
+password.user1=itchypark91
+password.user2=busydust25
+password.user3=thinchess38
+password.user4=slimyindigo99
 
-# Other Keys
-secret.key=xyzABCdefGHIjkl123
-access.token=mno789pqrSTUvwx456
-encryption.key=GHI456jklMNO789pqr
+# Strong Passwords
+password.admin1=z#SGdM8PY7UEzb
+password.admin2=@DeEJcS*$uB6FZ
+password.admin3=8PgKCq3#bjVja@
+password.admin4=SpE@d%s!F34$if
