--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.9'
     // Include Gson for JSON processing
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    // UI Style
+    implementation 'com.formdev:flatlaf:3.4.1'
+
 }
 
 run {
@@ -36,6 +40,8 @@ java {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
+
+
 
 application {
     // Define the main class for the application.
