Added the ability to exclude files from credential scan as encoded files could throw 100K+ potential passwords, obscuring any actual threats

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
-    // This dependency is used by the application.
+    // The dependencies used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.9'
+    implementation 'commons-io:commons-io:2.6'
     // Include Gson for JSON processing
     implementation 'com.google.code.gson:gson:2.8.9'
 
