--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     // UI Style
     implementation 'com.formdev:flatlaf:3.4.1'
 
+    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
+
+
 }
 
 run {
